css/stylesheet.css
body{
    background-image: image("ring.jpeg");
    margin: 0%;
}


h1{
    position: absolute;
    left: 2vh;
    top: 1.5vh;
    font-size: 30px;
}   
h3{
    position: absolute;
    top: 5%;
    right: -2.5vh;
    font-size: 15px;
    
    
    color: white;
    font-family: "Lexend Exa", sans-serif;
}

h2{
    color: white;
    font-family: "Lexend Exa", sans-serif;
}

h4{
    font-family: "Lexend Exa", sans-serif;
}

header object{
    position: absolute;
    top: 2vh;
    left: 1vh;
    width: 4vh;
}

div#layout-index{
    display: grid;
    height: 300vh;
    
    grid-template-columns:12.5% 1fr;
    grid-template-rows: 3% 2.5% 28% 100vh;
    grid-template-areas: 
    'hd hd'
    'nv nv'
    'ar ar'
    'sc sc'
    'sc sc';
}
div#layout{
    display: grid;
    height: 300vh;
    
    grid-template-columns:12.5% 1fr;
    grid-template-rows: 3% 2.5% 100vh;
    grid-template-areas: 
    'hd hd'
    'nv nv'
    'sc sc'
    'sc sc';
}

.Lexend{
    font-family: "Lexend Exa", sans-serif;
    font-size: 5vh;
    text-align: center;
}



header{
    background-color: 	white;
    font-size: 400%;
    grid-area: hd;

    font-family: "Lexend Exa", sans-serif;
}

nav{
    display: flex;
    grid-area: nv;
    background-color:white;
    justify-content: space-evenly;
    /*border-radius: 30px;*/

    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/

    
}
/*
aside{
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    grid-area: as;
    background-color: #3498db;
    border-radius: 30px;
    color: white;
}
*/
section{
    grid-area: sc;
    
    /*border-radius: 30px;*/
    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/
}



section#wrapper{
    display: flex;
    flex-direction: row;
    background-color: white;
    justify-content: space-evenly;
    flex-wrap: wrap;
    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/

}
.margin{
    margin-top: 50vh;
    margin-bottom: 100vh;
}

div#img{
    width: 100%;
    grid-area: sc;
    object-fit: fill;
}
div img{
    width: 800%;
    
}

article {
    width: 45%;
    object-fit: cover;
    margin-top: 3.5vh;
    
}
article img{
    transition: 0.2s;
    width: 100%;
    border-radius: 2.5%;
    scale: 100%;
}

article a img:hover{
    scale: 102%;
}

section#mainWrapper{
    display: flex;
    background-color: #01101b;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    background-image: image("ring.jpg");
}


a:link, a:visited {
  color: #3498db;
  padding: 15px 25px;
  text-align: center;
  text-decoration: none;

}




.hidden {
    opacity: 0;
    
    transform: translateY(0);
    filter: blur(5px);
    transition: all 1s;

}

.show {
    filter: blur(0);
    opacity: 1;
    transform: translateY(-100%);
}

